--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ padding:15px;
 
 }
 .globaltrading {
+  background: ("../images/global trade.jpeg")
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
@@ -44,7 +45,7 @@ color: white;
   font-size: 20px;
   padding:15px;
   width: 200px;
-  border: 2px solid #CE9510;
+  border: 2px solid #cdcdcd;
   background-color: #CE9510;
 }
 
@@ -71,18 +72,18 @@ width: 50%;
 
 .gridcontainer {
   display:grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   padding-bottom: 40px;
   grid-column-gap: 20px;
 }
 .tradinginstruments{
-  padding:20px 10px 20px 250px;
+  padding: 20px;
   width: 100%;
-  background: #F2F3F8;
+  background: rgba(0,0,0,0.8);
 
 }
 .bonus {
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/computer2.jpeg");
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/forex.jpeg");
   background-size: cover;
   background-position:center;
   background-repeat: no-repeat;
@@ -105,8 +106,8 @@ button {
 }
 .grid-container {
   display:grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   padding-bottom: 40px;
   grid-column-gap: 20px;
-  margin: 0;
+  padding: 10px;
 }
